--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -79,6 +79,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #open-positions {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -93,14 +94,28 @@ input[type=number]::-webkit-outer-spin-button {
     scale: 1.1;
 }
 
-#backtester {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 25px;
+
+@media (min-width: 1300px) {
+    #backtester {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        padding: 25px;
+    }
 }
 
+@media (max-width: 1300px) {
+    #backtester {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        padding: 25px;
+    }
+}
+
+
 #trading-view {
-    width: 40vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -113,7 +128,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #time-dials {
-    width: 40vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -122,7 +137,7 @@ input[type=number]::-webkit-outer-spin-button {
 .position {
     display: flex;
     flex-direction: row;
-    width: 45vw;
+    width: 100%;
     justify-content: space-evenly;
 }
 
